# ai-hub

./: .gitignore  AUDIT_OUTPUT.txt  CHATGPT_REVIEW_PACKAGE.md  CHATGPT_REVIEW_WORKFLOW.md  CONTRIBUTING.md  DESIGN.md  HANDOFF_TO_TRAE.md  README.md  REVIEW.md  V041_VERIFICATION_REPORT.md  chatgpt_get_reply_v081.js  chatgpt_review_v081.js  pyproject.toml  verify_audit.py
.github/workflows/: validate.yml
adapters/: __init__.py  marvis_mcp_server.py
cli/: explain_route.py  inspect.py  main.py  plan.py  trace.py
config/: router_rules.yaml  task_keywords.yaml
core/: __init__.py  bridge.py  capabilities.py  health.py  health_registry.py  history.py  provider.py  quota.py  registry.py  result.py  runtime_registry.py  session.py  task.py
docs/: ARCHITECTURE.md  GLOSSARY.md  GUI_BRIDGE_DESIGN.md  MAINTAINER_REVIEW.md  PRODUCT.md  PROVIDER_SPEC.md  ROADMAP.md  V0.2_SCOPE.md  V0.3_SOP.md  V0.4_SOP.md  provider_sdk.md
docs/adr/: 0001-gemini-cli-integration.md  0002-stub-provider.md  0003-qoder-cli-integration.md  (+16 more)
planner/: __init__.py  base.py  event_bus.py  execution_event.py  execution_metrics.py  executor.py  llm_planner.py  plan.py  plan_store.py  plan_validator.py  prompts.py  rule_based_planner.py  trace_collector.py
router/: __init__.py  health_router.py  router.py  score_router.py
scripts/: configure_marvis_mcp.py
tests/: test_benchmark.py  test_browser_bridge.py  test_cli_inspect.py  test_cli_plan.py  test_cli_plan_json.py  test_cli_score_integration.py  test_cli_trace.py  test_event_bus.py  test_execution_event.py  test_execution_metrics.py  test_explain_route.py  test_health.py  test_health_router.py  test_llm_planner.py  test_marvis_e2e.py  test_mcp_contract.py  test_plan_store.py  test_plan_validator.py  test_planner.py  test_provider_contract.py  test_quota.py  test_runtime.py  test_runtime_registry.py  test_score_router.py  test_session.py  test_skeleton.py  test_trace_collector.py  validate_provider.py
tools/: fake_runtime.py
(+29 files in other folders)
