[project]
name = "ai-hub"
version = "0.0.1"
description = "One command. Multiple AI providers. Free-first routing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.scripts]
ai-hub = "cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
packages = ["core", "router", "cli", "providers", "providers.demo"]
