[project]
name = "ai-hub"
version = "0.0.1"
description = "One command. Multiple AI providers. Free-first routing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.scripts]
ai-hub = "cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
    "live: marks tests as requiring live providers (deselect with '-m \"not live\"')",
]

[tool.setuptools]
packages = [
    "core",
    "router",
    "cli",
    "planner",
    "providers",
    "providers.demo",
    "providers.gemini",
    "providers.qoder",
    "providers.openai_api",
    "providers.openai_compatible",
    "providers.fake_browser",
    "providers.web_ai",
    "adapters",
    "scripts",
]
